[package]
name = "thicc"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A wide character string library."
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/Juici/thicc"
documentation = "https://docs.rs/thicc"

[features]
default = ["std", "macros"]
std = ["alloc", "wmemchr/std"]
alloc = []
macros = ["wchar"]

[dependencies]
cfg-if = "1.0"
impls = "1.0"
libc = "0.2.94"

wmemchr = { version = "0.1", default-features = false }
wchar = { version = "0.10", optional = true }

[dev-dependencies]
wchar = "0.10"
